# mds_component_boot

./: BUILD.gn
inc/: mds_boot.h
src/: boot_lzma.c  mds_boot.c
